refactor(chat): 重构聊天页面UI和交互体验